--- a/app/docs/components/FooterComponent.html
+++ b/app/docs/components/FooterComponent.html
@@ -81,14 +81,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-components-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        data-target="#xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
                                     >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-components-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        id="xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
                                     >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -127,14 +127,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-injectables-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        data-target="#xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
                                     >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-injectables-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        id="xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
                                     >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -152,14 +152,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-pipes-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        data-target="#xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
                                     >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-pipes-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        id="xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
                                     >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -438,14 +438,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#components-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        data-target="#components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
 >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="components-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        id="components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
 >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -484,14 +484,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#injectables-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        data-target="#injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
 >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="injectables-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        id="injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
 >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -509,14 +509,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#pipes-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        data-target="#pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
 >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="pipes-links-module-AppModule-9a49e44e-493d-4da3-936e-a80ce3a25f86"
+                                        id="pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
 >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -1105,8 +1105,8 @@ export class FooterComponent implements OnInit {
       &lt;p&gt;Node.js server code &lt;a href&#x3D;&quot;https://github.com/feross/standard&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; aria-label&#x3D;&quot;Standard style&quot;&gt;&lt;img class&#x3D;&quot;js-standard-style&quot; src&#x3D;&quot;https://cdn.rawgit.com/feross/standard/master/badge.svg&quot; alt&#x3D;&quot;JS Standard style&quot;&gt;&lt;/a&gt;&amp;nbsp;compliant&lt;/p&gt;
       &lt;p&gt;&lt;i class&#x3D;&quot;icon-git&quot;&gt;&lt;/i&gt;&amp;nbsp;Deployed from &lt;a href&#x3D;&quot;https://github.com/ouq77/portfolio-web/tree/portfolio-web-ng2-heroku&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; class&#x3D;&quot;js_track_link_click&quot; aria-label&#x3D;&quot;Github repo&quot;&gt;this repo&lt;/a&gt;&lt;/p&gt;
       &lt;p&gt;&lt;i class&#x3D;&quot;icon-file-code&quot;&gt;&lt;/i&gt;&amp;nbsp;Docs &lt;a href&#x3D;&quot;/docs/index.html&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; class&#x3D;&quot;js_track_link_click&quot; aria-label&#x3D;&quot;Docs location&quot;&gt;hosted here&lt;/a&gt;&lt;/p&gt;
-      &lt;p&gt;&lt;a href&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; title&#x3D;&quot;dependencies status&quot; aria-label&#x3D;&quot;Dependencies status&quot;&gt;&lt;img src&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/badges/dependencies.svg&quot; alt&#x3D;&quot;bitHound Dependencies&quot;&gt;&lt;/a&gt;&lt;/p&gt;
-      &lt;p&gt;&lt;a href&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; title&#x3D;&quot;devDependencies status&quot; aria-label&#x3D;&quot;Dev dependencies status&quot;&gt;&lt;img src&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/badges/devDependencies.svg&quot; alt&#x3D;&quot;bitHound Dev Dependencies&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+      &lt;!--&lt;p&gt;&lt;a href&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; title&#x3D;&quot;dependencies status&quot; aria-label&#x3D;&quot;Dependencies status&quot;&gt;&lt;img src&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/badges/dependencies.svg&quot; alt&#x3D;&quot;bitHound Dependencies&quot;&gt;&lt;/a&gt;&lt;/p&gt;--&gt;
+      &lt;!--&lt;p&gt;&lt;a href&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm&quot; target&#x3D;&quot;_blank&quot; rel&#x3D;&quot;noopener noreferrer&quot; title&#x3D;&quot;devDependencies status&quot; aria-label&#x3D;&quot;Dev dependencies status&quot;&gt;&lt;img src&#x3D;&quot;https://www.bithound.io/github/ouq77/portfolio-web/badges/devDependencies.svg&quot; alt&#x3D;&quot;bitHound Dev Dependencies&quot;&gt;&lt;/a&gt;&lt;/p&gt;--&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;div class&#x3D;&quot;last-modified&quot;&gt;
@@ -1140,7 +1140,7 @@ export class FooterComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!--footer start--><section class="footer" id="links">  <div class="container">    <div class="heading">      <h2>Links</h2>      <p>social links and page info</p>    </div>    <ul>      <li *ngFor="let link of links">        <a href="{{link.url}}"           target="_blank"           rel="noopener noreferrer"           title="{{link.title}}"           class="js_track_link_click"           attr.aria-label="{{link.title}}">          <i class="icon-{{link.icon}} icon-2x"></i>        </a>      </li>    </ul>    <div class="footer-info">      <p><i class="icon-copyright"></i>&nbsp;{{currentDate | date:"yyyy"}} &ndash; HTML Template by <i><a href="https://themeforest.net/user/themeelite" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Themeforest themeelite">themeelite</a></i></p>      <p>Hosted on the <i><a href="https://heroku.com" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Heroku">heroku.com</a></i> cloud platform</p>      <p>Angular, TypeScript, SCSS</p>      <p>Node.js server code <a href="https://github.com/feross/standard" target="_blank" rel="noopener noreferrer" aria-label="Standard style"><img class="js-standard-style" src="https://cdn.rawgit.com/feross/standard/master/badge.svg" alt="JS Standard style"></a>&nbsp;compliant</p>      <p><i class="icon-git"></i>&nbsp;Deployed from <a href="https://github.com/ouq77/portfolio-web/tree/portfolio-web-ng2-heroku" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Github repo">this repo</a></p>      <p><i class="icon-file-code"></i>&nbsp;Docs <a href="/docs/index.html" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Docs location">hosted here</a></p>      <p><a href="https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm" target="_blank" rel="noopener noreferrer" title="dependencies status" aria-label="Dependencies status"><img src="https://www.bithound.io/github/ouq77/portfolio-web/badges/dependencies.svg" alt="bitHound Dependencies"></a></p>      <p><a href="https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm" target="_blank" rel="noopener noreferrer" title="devDependencies status" aria-label="Dev dependencies status"><img src="https://www.bithound.io/github/ouq77/portfolio-web/badges/devDependencies.svg" alt="bitHound Dev Dependencies"></a></p>    </div>  </div>  <div class="last-modified">    <p><sup>Last updated: <%= LAST_MOD_SITE %></sup></p>  </div></section><!--footer end--></div>'
+        var COMPONENT_TEMPLATE = '<div><!--footer start--><section class="footer" id="links">  <div class="container">    <div class="heading">      <h2>Links</h2>      <p>social links and page info</p>    </div>    <ul>      <li *ngFor="let link of links">        <a href="{{link.url}}"           target="_blank"           rel="noopener noreferrer"           title="{{link.title}}"           class="js_track_link_click"           attr.aria-label="{{link.title}}">          <i class="icon-{{link.icon}} icon-2x"></i>        </a>      </li>    </ul>    <div class="footer-info">      <p><i class="icon-copyright"></i>&nbsp;{{currentDate | date:"yyyy"}} &ndash; HTML Template by <i><a href="https://themeforest.net/user/themeelite" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Themeforest themeelite">themeelite</a></i></p>      <p>Hosted on the <i><a href="https://heroku.com" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Heroku">heroku.com</a></i> cloud platform</p>      <p>Angular, TypeScript, SCSS</p>      <p>Node.js server code <a href="https://github.com/feross/standard" target="_blank" rel="noopener noreferrer" aria-label="Standard style"><img class="js-standard-style" src="https://cdn.rawgit.com/feross/standard/master/badge.svg" alt="JS Standard style"></a>&nbsp;compliant</p>      <p><i class="icon-git"></i>&nbsp;Deployed from <a href="https://github.com/ouq77/portfolio-web/tree/portfolio-web-ng2-heroku" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Github repo">this repo</a></p>      <p><i class="icon-file-code"></i>&nbsp;Docs <a href="/docs/index.html" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Docs location">hosted here</a></p>      <!--<p><a href="https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm" target="_blank" rel="noopener noreferrer" title="dependencies status" aria-label="Dependencies status"><img src="https://www.bithound.io/github/ouq77/portfolio-web/badges/dependencies.svg" alt="bitHound Dependencies"></a></p>-->      <!--<p><a href="https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm" target="_blank" rel="noopener noreferrer" title="devDependencies status" aria-label="Dev dependencies status"><img src="https://www.bithound.io/github/ouq77/portfolio-web/badges/devDependencies.svg" alt="bitHound Dev Dependencies"></a></p>-->    </div>  </div>  <div class="last-modified">    <p><sup>Last updated: <%= LAST_MOD_SITE %></sup></p>  </div></section><!--footer end--></div>'
     var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'},{'name': 'TravelComponent', 'selector': 'travel'},{'name': 'TravelMapComponent', 'selector': 'googlemap'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'FooterComponent'};
