--- a/app/docs/components/ContactFormComponent.html
+++ b/app/docs/components/ContactFormComponent.html
@@ -81,14 +81,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -101,12 +101,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -123,18 +117,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -152,14 +152,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -438,14 +438,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -458,12 +458,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -480,18 +474,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -509,14 +509,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -742,20 +742,18 @@
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
-    <li class="active">
-        <a href="#info" id="info-tab" role="tab" data-toggle="tab" data-link="info">Info</a>
-    </li>
-
-    <li>
-        <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
-    </li>
-
-    <li>
-        <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
-    </li>
-    <li>
-        <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
-    </li>
+        <li class="active">
+            <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
+        </li>
+        <li >
+            <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
+        </li>
+        <li >
+            <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
+        </li>
+        <li >
+            <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
+        </li>
 </ul>
 
 <div class="tab-content">
@@ -953,7 +951,7 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                    <td>contactService</td>
+                                                        <td>contactService</td>
                                                   
                                                         <td>
                                                                     <code><a href="../injectables/ContactService.html" target="_self" >ContactService</a></code>
@@ -965,7 +963,7 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                    <td>fb</td>
+                                                        <td>fb</td>
                                                   
                                                         <td>
                                                                     <code><a href="https://angular.io/api/forms/FormBuilder" target="_blank" >FormBuilder</a></code>
@@ -1019,6 +1017,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="106" class="link-to-prism">src/contact/components/contact.form.ts:106</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1088,6 +1087,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1155,6 +1155,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="85" class="link-to-prism">src/contact/components/contact.form.ts:85</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1224,6 +1225,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1260,6 +1262,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">src/contact/components/contact.form.ts:51</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1298,6 +1301,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1334,6 +1338,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">src/contact/components/contact.form.ts:59</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1372,6 +1377,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1408,6 +1414,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="115" class="link-to-prism">src/contact/components/contact.form.ts:115</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1852,7 +1859,7 @@
 </div>
 
 
-    <div class="tab-pane fade tab-source-code" id="c-source">
+    <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {FormGroup, FormControl, Validators, FormBuilder} from &#x27;@angular/forms&#x27;;
 import {HttpErrorResponse} from &#x27;@angular/common/http&#x27;;
@@ -1975,7 +1982,7 @@ export class ContactFormComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-templateData">
+    <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;!--contact form start--&gt;
 &lt;div class&#x3D;&quot;col-xs-12 col-sm-9 col-md-8 col-lg-8 contact-form&quot;&gt;
   &lt;h4&gt;Send a message&lt;/h4&gt;
@@ -2004,7 +2011,7 @@ export class ContactFormComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-tree">
+    <div class="tab-pane fade " id="c-tree">
         <div id="tree-container"></div>
         <div class="tree-legend">
             <div class="title">
@@ -2021,6 +2028,8 @@ export class ContactFormComponent implements OnInit {
             </div>
         </div>
     </div>
+
+    
 </div>
 
 <script src="../js/libs/vis.min.js"></script>
@@ -2069,6 +2078,7 @@ export class ContactFormComponent implements OnInit {
 
         <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
             var COMPODOC_CURRENT_PAGE_URL = 'ContactFormComponent.html';
         </script>
 
