--- a/app/docs/components/EducationComponent.html
+++ b/app/docs/components/EducationComponent.html
@@ -81,14 +81,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -101,12 +101,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -123,18 +117,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -152,14 +152,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -438,14 +438,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -458,12 +458,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -480,18 +474,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -509,14 +509,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -742,20 +742,18 @@
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
-    <li class="active">
-        <a href="#info" id="info-tab" role="tab" data-toggle="tab" data-link="info">Info</a>
-    </li>
-
-    <li>
-        <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
-    </li>
-
-    <li>
-        <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
-    </li>
-    <li>
-        <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
-    </li>
+        <li class="active">
+            <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
+        </li>
+        <li >
+            <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
+        </li>
+        <li >
+            <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
+        </li>
+        <li >
+            <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
+        </li>
 </ul>
 
 <div class="tab-content">
@@ -899,7 +897,7 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                    <td>educationService</td>
+                                                        <td>educationService</td>
                                                   
                                                         <td>
                                                                     <code><a href="../injectables/EducationService.html" target="_self" >EducationService</a></code>
@@ -954,6 +952,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -991,6 +990,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1027,6 +1027,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/education/components/education.ts:20</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1156,7 +1157,7 @@
 </div>
 
 
-    <div class="tab-pane fade tab-source-code" id="c-source">
+    <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {EducationService} from &#x27;../services/education&#x27;;
 import {School} from &#x27;../definitions/school&#x27;;
@@ -1196,7 +1197,7 @@ export class EducationComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-templateData">
+    <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;!--education start--&gt;
 &lt;section class&#x3D;&quot;education&quot; id&#x3D;&quot;education&quot;&gt;
   &lt;div class&#x3D;&quot;container&quot;&gt;
@@ -1297,7 +1298,7 @@ export class EducationComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-tree">
+    <div class="tab-pane fade " id="c-tree">
         <div id="tree-container"></div>
         <div class="tree-legend">
             <div class="title">
@@ -1314,6 +1315,8 @@ export class EducationComponent implements OnInit {
             </div>
         </div>
     </div>
+
+    
 </div>
 
 <script src="../js/libs/vis.min.js"></script>
@@ -1362,6 +1365,7 @@ export class EducationComponent implements OnInit {
 
         <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
             var COMPODOC_CURRENT_PAGE_URL = 'EducationComponent.html';
         </script>
 
