--- a/app/docs/components/HeaderComponent.html
+++ b/app/docs/components/HeaderComponent.html
@@ -81,14 +81,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -101,12 +101,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -123,18 +117,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -152,14 +152,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -438,14 +438,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -458,12 +458,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -480,18 +474,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -509,14 +509,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -742,20 +742,18 @@
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
-    <li class="active">
-        <a href="#info" id="info-tab" role="tab" data-toggle="tab" data-link="info">Info</a>
-    </li>
-
-    <li>
-        <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
-    </li>
-
-    <li>
-        <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
-    </li>
-    <li>
-        <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
-    </li>
+        <li class="active">
+            <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
+        </li>
+        <li >
+            <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
+        </li>
+        <li >
+            <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
+        </li>
+        <li >
+            <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
+        </li>
 </ul>
 
 <div class="tab-content">
@@ -919,7 +917,7 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                    <td>_headerService</td>
+                                                        <td>_headerService</td>
                                                   
                                                         <td>
                                                                     <code><a href="../injectables/HeaderService.html" target="_self" >HeaderService</a></code>
@@ -973,6 +971,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">src/header/components/header.ts:43</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1042,6 +1041,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1078,6 +1078,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">src/header/components/header.ts:58</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1116,6 +1117,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1153,6 +1155,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1189,6 +1192,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">src/header/components/header.ts:76</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1276,6 +1280,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="101" class="link-to-prism">src/header/components/header.ts:101</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1475,7 +1480,7 @@
 </div>
 
 
-    <div class="tab-pane fade tab-source-code" id="c-source">
+    <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Component, OnInit} from &#x27;@angular/core&#x27;;
 import {HeaderService} from &#x27;../services/header&#x27;;
 import {MENU_CONFIG, GRID_ROTATOR_CONFIG} from &#x27;../models/header.config&#x27;;
@@ -1597,7 +1602,7 @@ export class HeaderComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-templateData">
+    <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;!--banner start--&gt;
 &lt;div class&#x3D;&quot;banner row&quot; id&#x3D;&quot;home&quot;&gt;
   &lt;div class&#x3D;&quot;col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding&quot;&gt;
@@ -1653,7 +1658,7 @@ export class HeaderComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-tree">
+    <div class="tab-pane fade " id="c-tree">
         <div id="tree-container"></div>
         <div class="tree-legend">
             <div class="title">
@@ -1670,6 +1675,8 @@ export class HeaderComponent implements OnInit {
             </div>
         </div>
     </div>
+
+    
 </div>
 
 <script src="../js/libs/vis.min.js"></script>
@@ -1718,6 +1725,7 @@ export class HeaderComponent implements OnInit {
 
         <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
             var COMPODOC_CURRENT_PAGE_URL = 'HeaderComponent.html';
         </script>
 
