--- a/app/docs/components/TravelMapComponent.html
+++ b/app/docs/components/TravelMapComponent.html
@@ -81,14 +81,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -101,12 +101,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -123,18 +117,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -152,14 +152,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="xs-pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="xs-pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
                                     >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -438,14 +438,14 @@
                         <a href="modules/AppModule.html" data-type="entity-link">AppModule</a>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-cogs"></span>
                                     <span>Components</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="components-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="components-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="components/AboutComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">AboutComponent</a>
@@ -458,12 +458,6 @@
                                         </li>
                                         <li class="link">
                                             <a href="components/ContactFormComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">ContactFormComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
-                                        </li>
-                                        <li class="link">
-                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
                                         </li>
                                         <li class="link">
                                             <a href="components/EducationComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">EducationComponent</a>
@@ -480,18 +474,24 @@
                                         <li class="link">
                                             <a href="components/SkillsComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">SkillsComponent</a>
                                         </li>
+                                        <li class="link">
+                                            <a href="components/TravelComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelComponent</a>
+                                        </li>
+                                        <li class="link">
+                                            <a href="components/TravelMapComponent.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">TravelMapComponent</a>
+                                        </li>
                                 </ul>
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-long-arrow-down"></span>
                                     <span>Injectables</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="injectables-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="injectables-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="injectables/ContactService.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules"}>ContactService</a>
@@ -509,14 +509,14 @@
                             </li>
                             <li class="chapter inner">
                                 <div class="simple menu-toggler" data-toggle="collapse"
-                                        data-target="#pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        data-target="#pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                     <span class="fa fa-fw fa-plus"></span>
                                     <span>Pipes</span>
                                     <span class="fa fa-angle-down"></span>
                                 </div>
                                 <ul class="links collapse"
-                                        id="pipes-links-module-AppModule-2a8ade6c-c575-45d5-b96b-b56ea2316aeb"
+                                        id="pipes-links-module-AppModule-01867f906573330ed368b9de056b11b2"
 >
                                         <li class="link">
                                             <a href="pipes/BadgeUrlPipe.html" data-type="entity-link" data-context="sub-entity" data-context-id="modules">BadgeUrlPipe</a>
@@ -742,20 +742,18 @@
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
-    <li class="active">
-        <a href="#info" id="info-tab" role="tab" data-toggle="tab" data-link="info">Info</a>
-    </li>
-
-    <li>
-        <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
-    </li>
-
-    <li>
-        <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
-    </li>
-    <li>
-        <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
-    </li>
+        <li class="active">
+            <a href="#info" role="tab" id="info-tab" data-toggle="tab" data-link="info">Info</a>
+        </li>
+        <li >
+            <a href="#source" role="tab" id="source-tab" data-toggle="tab" data-link="source">Source</a>
+        </li>
+        <li >
+            <a href="#templateData" role="tab" id="templateData-tab" data-toggle="tab" data-link="template">Template</a>
+        </li>
+        <li >
+            <a href="#tree" role="tab" id="tree-tab" data-toggle="tab" data-link="dom-tree">DOM Tree</a>
+        </li>
 </ul>
 
 <div class="tab-content">
@@ -976,7 +974,7 @@
                                         </thead>
                                         <tbody>
                                                 <tr>
-                                                    <td>_travelService</td>
+                                                        <td>_travelService</td>
                                                   
                                                         <td>
                                                                     <code><a href="../injectables/TravelService.html" target="_self" >TravelService</a></code>
@@ -1031,6 +1029,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1067,6 +1066,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="129" class="link-to-prism">src/travel/components/travel.gmap.ts:129</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1140,6 +1140,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1176,6 +1177,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">src/travel/components/travel.gmap.ts:76</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1214,6 +1216,7 @@
                             </td>
                         </tr>
 
+
                 <tr>
                     <td class="col-md-4">
 
@@ -1250,6 +1253,7 @@
                                     <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">src/travel/components/travel.gmap.ts:70</a></div>
                             </td>
                         </tr>
+
 
                 <tr>
                     <td class="col-md-4">
@@ -1974,7 +1978,7 @@
 </div>
 
 
-    <div class="tab-pane fade tab-source-code" id="c-source">
+    <div class="tab-pane fade  tab-source-code" id="c-source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import event &#x3D; google.maps.event;
 import Map &#x3D; google.maps.Map;
 import MapOptions &#x3D; google.maps.MapOptions;
@@ -2146,13 +2150,13 @@ export class TravelMapComponent implements OnInit {
 </code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-templateData">
+    <div class="tab-pane fade " id="c-templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;row map-area&quot;&gt;
   &lt;div id&#x3D;&quot;map-canvas&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;</code></pre>
     </div>
 
-    <div class="tab-pane fade" id="c-tree">
+    <div class="tab-pane fade " id="c-tree">
         <div id="tree-container"></div>
         <div class="tree-legend">
             <div class="title">
@@ -2169,6 +2173,8 @@ export class TravelMapComponent implements OnInit {
             </div>
         </div>
     </div>
+
+    
 </div>
 
 <script src="../js/libs/vis.min.js"></script>
@@ -2217,6 +2223,7 @@ export class TravelMapComponent implements OnInit {
 
         <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
+            var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
             var COMPODOC_CURRENT_PAGE_URL = 'TravelMapComponent.html';
         </script>
 
