--- a/app/docs/components/EducationComponent.html
+++ b/app/docs/components/EducationComponent.html
@@ -1179,7 +1179,7 @@ export class EducationComponent implements OnInit {
 
   ngOnInit() {
     this.loadSchools();
-    this.loadCodeSchool();
+    // this.loadCodeSchool();
   }
 
   loadSchools(): void {
