Updated current location

--- a/src/contact/components/contact.htm
+++ b/src/contact/components/contact.htm
@@ -14,7 +14,7 @@
       <h4>Contact details</h4>
       <p>
         <i class="icon-location icon-lg"></i>&nbsp;
-        Brooklyn, Wellington, New Zealand
+        Silverstream, Wellington, New Zealand
       </p>
       <p>
         <i class="icon-phone icon-lg"></i>&nbsp;
