About and experience update

--- a/src/about/components/about.scss
+++ b/src/about/components/about.scss
@@ -45,6 +45,15 @@
       }
     }
 
+    ul {
+      padding-bottom: 2rem;
+      padding-left: 2.5rem;
+    }
+
+    li > a {
+      color: $white;
+    }
+
     @include respond-to($query: $screen-x2-min) {
       img {
         width: 100%;
