--- a/src/about/components/about.htm
+++ b/src/about/components/about.htm
@@ -12,6 +12,15 @@
         <p>I have been in <b>Software Development</b> since 2008, with most of that time spent in <b>Agile environments</b>, designing, coding, testing and supporting applications across a <b>variety of technologies</b> and <b>platforms</b>.</p>
         <p>While my background is <b>Java</b>, I have been focusing my attention on <b>JavaScript development</b> since June 2014, working with frameworks such as <b>Angular</b>, <b>React</b> and <b>GraphQL</b>. My passion is developing for the <b>Node.js</b> runtime.</p>
         <p>I have a strong <b>sense of responsibility</b> and am always driven to <b>deliver on or ahead of deadlines</b>. <b>Front-end</b> or <b>back-end</b>, I'm equally comfortable performing either or both.</p>
+        <h4 class="sub-heading">Open Source Contributions</h4>
+        <ul>
+          <li><a href="https://github.com/ng-bootstrap/ng-bootstrap" target="_blank">ng-bootstrap/ng-bootstrap</a></li>
+          <li><a href="https://github.com/angular/components" target="_blank">angular/components</a></li>
+          <li><a href="https://github.com/DefinitelyTyped/DefinitelyTyped" target="_blank">DefinitelyTyped/DefinitelyTyped</a></li>
+          <li><a href="https://github.com/creditkarma/graphql-validator" target="_blank">creditkarma/graphql-validator</a></li>
+          <li><a href="https://github.com/IdentityModel/oidc-client-js" target="_blank">IdentityModel/oidc-client-js</a></li>
+          <li><a href="https://github.com/daveho/AceGWT" target="_blank">daveho/AceGWT</a></li>
+        </ul>
         <h4 class="sub-heading">Hobbies and Interests</h4>
         <p><i class="icon-camera-alt"></i>&nbsp;Photography, <i class="icon-android"></i>&nbsp;Android, <i class="icon-road"></i>&nbsp;travel and <i class="icon-flight"></i>&nbsp;plane spotting - not necessarily in that order.</p>
         <a id="cv_request" href="#contact-form" class="btn-normal js_track_link_click" aria-label="Request CV">Request CV &amp; References</a>
