Update rel values

--- a/src/app/components/contact/components/contact.html
+++ b/src/app/components/contact/components/contact.html
@@ -25,7 +25,7 @@
         <i class="icon-link icon-lg"></i>&nbsp;
         <a href="https://portfolio.ouq77.kiwi"
            target="_blank"
-           rel="noopener noreferrer"
+           rel="noopener"
            class="js_track_link_click"
            itemscope="url"
            aria-label="Portfolio link">portfolio.ouq77.kiwi</a></p>
