--- a/src/app/components/education/components/education.html
+++ b/src/app/components/education/components/education.html
@@ -15,7 +15,7 @@
             <a *ngIf="school.institution.url"
                href="{{school.institution.url}}"
                target="_blank"
-               rel="noopener noreferrer"
+               rel="noopener"
                class="link js_track_link_click"
                attr.aria-label="{{school.institution.name}}">
               <i class="icon-link-ext"></i>
