--- a/src/app/components/experience/components/experience.html
+++ b/src/app/components/experience/components/experience.html
@@ -15,7 +15,7 @@
             <a *ngIf="job.institution.url"
                href="{{job.institution.url}}"
                target="_blank"
-               rel="noopener noreferrer"
+               rel="noopener"
                class="link js_track_link_click"
                attr.aria-label="{{job.institution.name}}">
               <i class="icon-link-ext"></i>
