--- a/src/assets/css/_fontello.scss
+++ b/src/assets/css/_fontello.scss
@@ -10,6 +10,7 @@
   url('../fonts/fontello.svg?4253260#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: auto;
 }
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
